# 08-cpp-inference-tflite

./: .gitattributes  .gitignore  01 help.ipynb  300 refactored-detect with blazeface.ipynb  999 refactored-measure.ipynb  CMakeLists.txt  anchors.h  decode_boxes.cpp  decode_boxes.h  main.cpp  nms.cpp  utils_refactored.py
data/: anchors.pickle  boxes.pickle  scores.pickle
include/: decode_boxes.h
mediapipe/c/_objs/mediapipe/: mediapipe.pic.d
mediapipe/calculators/core/: clip_vector_size_calculator.pb.cc  constant_side_packet_calculator.pb.cc  flow_limiter_calculator.pb.cc  gate_calculator.pb.cc  split_vector_calculator.pb.cc
mediapipe/calculators/tensor/: inference_calculator_proto_descriptors.inc
mediapipe/framework/: calculator_profile.pb.cc  packet_factory.pb.cc  packet_generator.pb.cc  packet_generator.pb.h  status_handler.pb.cc  stream_handler.pb.cc
mediapipe/framework/_objs/calculator_base/: calculator_base.pic.d
mediapipe/framework/_objs/calculator_cc_proto/: calculator.pb.pic.d
mediapipe/framework/_objs/calculator_context/: calculator_context.pic.d
mediapipe/framework/formats/: classification.pb.cc  image_format.pb.cc
mediapipe/modules/face_detection/: face_detection_proto_descriptors.inc  face_detection_short_range.tflite
mediapipe/modules/face_landmark/: face_landmark_with_attention.tflite  face_landmarks_model_loader.inc
mediapipe/modules/hand_landmark/: hand_landmark_full.tflite  hand_landmark_model_loader.inc
mediapipe/modules/palm_detection/: palm_detection_full.tflite  palm_detection_model_loader.inc
(+220 files in other folders)
